<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Address Book</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone Number</string>
    <string name="email">E-Mail</string>
    <string name="street">Street</string>
    <string name="city">City/State/Zip</string>
    <string name="address">Address</string>

    <string name="menu_item_add_contact">Add Contact</string>
    <string name="menu_item_edit_contact">Edit Contact</string>
    <string name="menu_item_delete_contact">Delete Contact</string>
    <string name="button_save_contact">Save Contact</string>

    <string name="confirmTitle">Are you Sure</string>
    <string name="confirmMessage">This will permanently delete contact</string>
    <string name="errorButton">OK</string>
    <string name="errorTitle">Contact Surname is Required</string>
    <string name="errorMessage">You must enter a contact surname</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>

</resources>
